--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "6",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
