--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
