--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "6",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.32",
     "use-dark-mode": "^2.3.1"
   },
